# drawshot

./: Actions.qml  BottomTools.qml  CMakeLists.txt  Content.qml  Dialogs.qml  Functions.js  Gif.h  LeftContent.qml  LeftTools.qml  Main.qml  README.md  ResizeRect.qml  RightContent.qml  SelectWindow.qml  Test.qml  UserUsageDocuments.docx  arearecord.cpp  arearecord.h  copypaintiitems.cpp  copypaintiitems.h  drawshot_developmentDocument.docx  drawshot_summaryReport.pptx  elementgroup.cpp  elementgroup.h  main.cpp  mygeometry.cpp  mygeometry.h  mymaterial.cpp  mymaterial.h  mymaterialshader.cpp  mymaterialshader.h  myshape.cpp  myshape.h  mytexture.cpp  mytexture.h  paintitems.cpp  paintitems.h  qsgline.cpp  qsgline.h  resource.qrc  (+7 more)
